working swagger for gamesLibrary
