# swagger_server/models/__init__.py
@@ -3,3 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.default_error import DefaultError
+from swagger_server.models.error import Error
+from swagger_server.models.game import Game
+from swagger_server.models.games_library import GamesLibrary
+from swagger_server.models.model400_bad_request_error import Model400BadRequestError
+from swagger_server.models.model404_not_found_error import Model404NotFoundError
+from swagger_server.models.model500_internal_server_error import Model500InternalServerError
